--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ speedy2d = "1.12"
 rhai = {version = "1.13", features = ["f32_float", "internals"]}
 notify = "5.1.0"
 thiserror = "1.0"
+chrono = "0.4"
