--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,5 @@ notify = "5.1.0"
 thiserror = "1.0"
 chrono = "0.4"
 rouille = "3.6"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
