--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ speedy2d = {git = "https://github.com/superlou/Speedy2D.git"}
 rhai = {version = "1.13", features = ["f32_float", "internals"]}
 boa_engine = {git = "https://github.com/boa-dev/boa.git"}
 boa_gc = {git = "https://github.com/boa-dev/boa.git"}
+boa_runtime = {git = "https://github.com/boa-dev/boa.git"}
 notify = "5.1.0"
 thiserror = "1.0"
 chrono = "0.4"
