--- a/frontend/package.json
+++ b/frontend/package.json
@@ -53,6 +53,7 @@
     "ember-data": "~4.11.3",
     "ember-fetch": "^8.1.2",
     "ember-load-initializers": "^2.1.2",
+    "ember-mdi": "^2.0.0",
     "ember-modifier": "^4.1.0",
     "ember-page-title": "^7.0.0",
     "ember-qunit": "^6.2.0",
