--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,5 @@ rouille = "3.6"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 walkdir = "2.3.3"
+hostname = "0.3"
+local-ip-address = "0.5"
