--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ chrono = "0.4"
 hostname = "0.3"
 local-ip-address = "0.5"
 notify = "5.1.0"
+pico-args = "0.5"
 rouille = "3.6"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
