Added tracing for logging

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,5 @@ serde_json = "1.0"
 speedy2d = {git = "https://github.com/superlou/Speedy2D.git"}
 thiserror = "1.0"
 walkdir = "2.3.3"
+tracing = "0.1"
+tracing-subscriber = "0.3"
